--- a/upgrade_status.info.yml
+++ b/upgrade_status.info.yml
@@ -1,5 +1,5 @@
 type: module
 name: 'Upgrade Status'
-description: 'Tool to review deprecation status'
+description: 'Review current status of known Drupal 9 incompatibilities on the site'
 package: Administration
 core: 8.x
