Add controller, form, cache bin, project collector

--- a/upgrade_status.info.yml
+++ b/upgrade_status.info.yml
@@ -3,3 +3,5 @@ name: 'Upgrade Status'
 description: 'Review current status of known Drupal 9 incompatibilities on the site'
 package: Administration
 core: 8.x
+dependencies:
+  - drupal:update
