--- a/upgrade_status.routing.yml
+++ b/upgrade_status.routing.yml
@@ -1,7 +1,15 @@
 upgrade_status.analyse:
-  path: '/admin/reports/updates/deprecations'
+  path: '/admin/reports/updates/analyser'
   defaults:
     _title: 'Drupal 9 Readiness'
     _form: 'Drupal\upgrade_status\Form\ReadinessForm'
   requirements:
-    _permission: 'administer site configuration'
+    _permission: 'administer software updates'
+
+upgrade_status.deprecation_dashboard:
+  path: '/admin/reports/updates/deprecations'
+  defaults:
+    _controller: '\Drupal\upgrade_status\Controller\DeprecationDasboardController::content'
+    _title: 'Drupal 9 readiness'
+  requirements:
+    _permission: 'administer software updates'
