--- a/upgrade_status.info.yml
+++ b/upgrade_status.info.yml
@@ -1,6 +1,6 @@
 type: module
 name: 'Upgrade Status'
-description: 'Review current status of known Drupal 9 incompatibilities on the site'
+description: 'Review current status of known Drupal 9 incompatibilities on the site.'
 package: Administration
 core: 8.x
 dependencies:
