--- a/upgrade_status.routing.yml
+++ b/upgrade_status.routing.yml
@@ -9,7 +9,7 @@ upgrade_status.report:
 upgrade_status.project:
   path: '/admin/reports/upgrade/project/{project_name}'
   defaults:
-    _controller: '\Drupal\upgrade_status\Controller\DeprecationListController::getDeprecationReportForProject'
+    _controller: '\Drupal\upgrade_status\Controller\DeprecationListController::content'
     _title: 'Deprecation report'
   requirements:
     _permission: 'administer software updates'
