--- a/deprecation_testing.neon
+++ b/deprecation_testing.neon
@@ -1,23 +1,23 @@
 # @todo document the sources (and the versions of sources) of parts of this
 # file and why each thing is done
 parameters:
+		# Ignore tests and api
 	excludes_analyse:
 		- *.api.php
 		- */tests/Drupal/Tests/Listeners/Legacy/*
 		- */tests/fixtures/*.php
 	customRulesetUsed: true
-	# Ignore phpstan-drupal extension's rules.
 	fileExtensions:
 		- module
 		- theme
 		- inc
+	# Ignore phpstan-drupal extension's rules.
 	ignoreErrors:
 		- '#\Drupal calls should be avoided in classes, use dependency injection instead#'
 		- '#Plugin definitions cannot be altered.#'
 		- '#Missing cache backend declaration for performance.#'
 		- '#Plugin manager has cache backend specified but does not declare cache tags.#'
 	reportUnmatchedIgnoredErrors: false
-	# Ignore tests
 extensions:
 	drupal: PHPStan\DependencyInjection\DrupalExtension
 drupal:
