--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "GPL-2.0-or-later",
     "require": {
         "drupal/core": "^8.6",
-        "mglaman/phpstan-drupal": "^0.12.0@dev",
+        "mglaman/phpstan-drupal": "0.11.3",
         "phpstan/phpstan-deprecation-rules": "^0.11.0@dev"
     },
     "minimum-stability": "dev"
