--- a/upgrade_status.routing.yml
+++ b/upgrade_status.routing.yml
@@ -32,3 +32,11 @@ upgrade_status.add_project:
     _title: 'Add project to queue'
   requirements:
     _permission: 'administer software updates'
+
+upgrade_status.export:
+  path: '/admin/reports/upgrade/full-export'
+  defaults:
+    _controller: '\Drupal\upgrade_status\Controller\ExportController::downloadFullExport'
+    _title: 'Upgrade status'
+  requirements:
+    _permission: 'administer software updates'
