--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "drupal/core": "^8.6",
         "mglaman/phpstan-drupal": "0.11.3",
-        "phpstan/phpstan-deprecation-rules": "^0.11.0@dev"
+        "phpstan/phpstan-deprecation-rules": "^0.11.0@dev",
+        "drupal/git_deploy": "2.x-dev"
     },
     "minimum-stability": "dev"
 }
