Add inspectable queue to prevent re-adding projects to the queue

--- a/upgrade_status.services.yml
+++ b/upgrade_status.services.yml
@@ -13,3 +13,6 @@ services:
   logger.channel.upgrade_status:
     parent: logger.channel_base
     arguments: ['upgrade_status']
+  queue.inspectable:
+    class: Drupal\upgrade_status\Queue\InspectableQueueFactory
+    arguments: ['@database']
