--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "require": {
         "drupal/core": "^8.6",
         "mglaman/phpstan-drupal": "0.11.3",
-        "phpstan/phpstan": "^0.11.8@dev",
-        "phpstan/phpstan-deprecation-rules": "^0.11.2@dev",
+        "phpstan/phpstan": "0.11.6",
+        "phpstan/phpstan-deprecation-rules": "^0.11.0@dev",
         "drupal/git_deploy": "2.x-dev",
         "phpunit/phpunit": "^4.8.35 || ^6.5"
     },
