--- a/upgrade_status.routing.yml
+++ b/upgrade_status.routing.yml
@@ -9,23 +9,15 @@ upgrade_status.report:
 upgrade_status.project:
   path: '/admin/reports/upgrade/project/{type}/{project_machine_name}'
   defaults:
-    _controller: '\Drupal\upgrade_status\Controller\DeprecationListController::content'
-    _title: 'Deprecation report'
-  requirements:
-    _permission: 'administer software updates'
-
-upgrade_status.full_export:
-  path: '/admin/reports/upgrade/export'
-  defaults:
-    _controller: '\Drupal\upgrade_status\Controller\ExportController::downloadFullExport'
+    _controller: '\Drupal\upgrade_status\Controller\ScanResultController::resultPage'
     _title: 'Upgrade status'
   requirements:
     _permission: 'administer software updates'
 
-upgrade_status.single_export:
+upgrade_status.export:
   path: '/admin/reports/upgrade/export/{type}/{project_machine_name}'
   defaults:
-    _controller: '\Drupal\upgrade_status\Controller\ExportController::downloadSingleExport'
+    _controller: '\Drupal\upgrade_status\Controller\ScanResultController::resultExport'
     _title: 'Upgrade status'
   requirements:
     _permission: 'administer software updates'
