--- a/upgrade_status.services.yml
+++ b/upgrade_status.services.yml
@@ -12,7 +12,7 @@ services:
     arguments: ['@extension.list.module', '@theme_handler', '@extension.list.profile']
   upgrade_status.result_formatter:
     class: Drupal\upgrade_status\ScanResultFormatter
-    arguments: ['@keyvalue', '@date.formatter']
+    arguments: ['@keyvalue', '@date.formatter', '@datetime.time']
   logger.channel.upgrade_status:
     parent: logger.channel_base
     arguments: ['upgrade_status']
