--- a/upgrade_status.services.yml
+++ b/upgrade_status.services.yml
@@ -6,7 +6,7 @@ services:
     class: Symfony\Component\Console\Output\BufferedOutput
   upgrade_status.deprecation_analyser:
     class: Drupal\upgrade_status\DeprecationAnalyser
-    arguments: ['@keyvalue', '@logger.channel.upgrade_status', '@upgrade_status.string_input', '@upgrade_status.buffered_output', '@config.factory']
+    arguments: ['@keyvalue', '@logger.channel.upgrade_status', '@upgrade_status.string_input', '@upgrade_status.buffered_output', '@config.factory', '@http_client']
   upgrade_status.project_collector:
     class: Drupal\upgrade_status\ProjectCollector
     arguments: ['@extension.list.module', '@theme_handler', '@extension.list.profile']
