Issue #3065760 by Gábor Hojtsy, waverate, alexpott, nrackleff, aspilicious, Charlie ChX Negyesi: Fail more gracefully when exceptions happen, eg. Uncaught PHPStan\Broker\ClassAutoloadingException with Redirect 8.x-1.3

--- a/upgrade_status.routing.yml
+++ b/upgrade_status.routing.yml
@@ -21,3 +21,13 @@ upgrade_status.export:
     _title: 'Upgrade status'
   requirements:
     _permission: 'administer software updates'
+
+upgrade_status.analyse:
+  path: '/admin/reports/upgrade/analyse/{type}/{project_machine_name}'
+  defaults:
+    _controller: '\Drupal\upgrade_status\Controller\ScanResultController::analyse'
+  requirements:
+    _permission: 'administer software updates'
+  # Support only POST so nothing accidental happens on GET.
+  methods:
+    - POST
