--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "phpstan/phpstan": "^0.11.9",
         "phpstan/phpstan-deprecation-rules": "^0.11.2",
         "drupal/git_deploy": "2.x-dev",
+        "mathieuviossat/arraytotexttable": "~1.0.0",
         "phpunit/phpunit": "^4.8.35 || ^6.5"
     },
     "minimum-stability": "dev"
