--- a/upgrade_status.routing.yml
+++ b/upgrade_status.routing.yml
@@ -15,7 +15,7 @@ upgrade_status.project:
     _permission: 'administer software updates'
 
 upgrade_status.export:
-  path: '/admin/reports/upgrade/export/{type}/{project_machine_name}'
+  path: '/admin/reports/upgrade/export/{type}/{project_machine_name}/{format}'
   defaults:
     _controller: '\Drupal\upgrade_status\Controller\ScanResultController::resultExport'
     _title: 'Upgrade status'
