Issue #3080986 by Gábor Hojtsy, tedbow: Show Drupal 9 compatibility information from core_version_requirement on the Upgrade Status UI

--- a/tests/modules/upgrade_status_test_contrib_no_error/upgrade_status_test_contrib_no_error.info.yml
+++ b/tests/modules/upgrade_status_test_contrib_no_error/upgrade_status_test_contrib_no_error.info.yml
@@ -3,5 +3,5 @@ type: module
 description: 'Support module for upgrade status module testing.'
 package: Testing
 version: VERSION
-core: 8.x
+core_version_requirement: ^8 || ^9
 project: 'upgrade_status'
