--- a/tests/modules/upgrade_status_test_no_error/upgrade_status_test_no_error.info.yml
+++ b/tests/modules/upgrade_status_test_no_error/upgrade_status_test_no_error.info.yml
@@ -3,4 +3,4 @@ type: module
 description: 'Support module for upgrade status module testing.'
 package: Testing
 version: VERSION
-core: 8.x
+core_version_requirement: ^8 || ^9
