--- a/tests/modules/upgrade_status_test_submodules/modules/upgrade_status_test_submodules_a/upgrade_status_test_submodules_a.info.yml
+++ b/tests/modules/upgrade_status_test_submodules/modules/upgrade_status_test_submodules_a/upgrade_status_test_submodules_a.info.yml
@@ -3,6 +3,6 @@ type: module
 description: 'Support module for upgrade status module testing.'
 package: Testing
 version: VERSION
-core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - drupal:upgrade_status_test_submodules
