--- a/tests/modules/upgrade_status_test_submodules/upgrade_status_test_submodules.info.yml
+++ b/tests/modules/upgrade_status_test_submodules/upgrade_status_test_submodules.info.yml
@@ -3,4 +3,4 @@ type: module
 description: 'Support module for update module testing.'
 package: Testing
 version: VERSION
-core: 8.x
+core_version_requirement: ^8 || ^9
