--- a/upgrade_status.services.yml
+++ b/upgrade_status.services.yml
@@ -1,12 +1,7 @@
 services:
-  upgrade_status.string_input:
-    class: Symfony\Component\Console\Input\StringInput
-    arguments: ['analyse']
-  upgrade_status.buffered_output:
-    class: Symfony\Component\Console\Output\BufferedOutput
   upgrade_status.deprecation_analyser:
     class: Drupal\upgrade_status\DeprecationAnalyser
-    arguments: ['@keyvalue', '@logger.channel.upgrade_status', '@upgrade_status.string_input', '@upgrade_status.buffered_output', '@config.factory', '@http_client', '@file_system']
+    arguments: ['@keyvalue', '@logger.channel.upgrade_status', '@http_client', '@file_system']
   upgrade_status.project_collector:
     class: Drupal\upgrade_status\ProjectCollector
     arguments: ['@extension.list.module', '@theme_handler', '@extension.list.profile']
