--- a/upgrade_status.routing.yml
+++ b/upgrade_status.routing.yml
@@ -22,10 +22,10 @@ upgrade_status.export:
   requirements:
     _permission: 'administer software updates'
 
-upgrade_status.analyse:
-  path: '/admin/reports/upgrade-status/analyse/{type}/{project_machine_name}'
+upgrade_status.analyze:
+  path: '/admin/reports/upgrade-status/analyze/{type}/{project_machine_name}'
   defaults:
-    _controller: '\Drupal\upgrade_status\Controller\ScanResultController::analyse'
+    _controller: '\Drupal\upgrade_status\Controller\ScanResultController::analyze'
   requirements:
     _permission: 'administer software updates'
   # Support only POST so nothing accidental happens on GET.
