--- a/upgrade_status.services.yml
+++ b/upgrade_status.services.yml
@@ -1,6 +1,6 @@
 services:
-  upgrade_status.deprecation_analyser:
-    class: Drupal\upgrade_status\DeprecationAnalyser
+  upgrade_status.deprecation_analyzer:
+    class: Drupal\upgrade_status\DeprecationAnalyzer
     arguments: ['@keyvalue', '@logger.channel.upgrade_status', '@http_client', '@file_system', '@twig']
   upgrade_status.project_collector:
     class: Drupal\upgrade_status\ProjectCollector
