--- a/upgrade_status.services.yml
+++ b/upgrade_status.services.yml
@@ -1,7 +1,10 @@
 services:
   upgrade_status.deprecation_analyzer:
     class: Drupal\upgrade_status\DeprecationAnalyzer
-    arguments: ['@keyvalue', '@logger.channel.upgrade_status', '@http_client', '@file_system', '@twig']
+    arguments: ['@keyvalue', '@logger.channel.upgrade_status', '@http_client', '@file_system', '@twig', '@upgrade_status.library_deprecation_analyzer']
+  upgrade_status.library_deprecation_analyzer:
+    class: Drupal\upgrade_status\LibraryDeprecationAnalyzer
+    arguments: ['@library.discovery.parser', '@twig', '@extension.list.module', '@extension.list.theme', '@extension.list.profile']
   upgrade_status.project_collector:
     class: Drupal\upgrade_status\ProjectCollector
     arguments: ['@extension.list.module', '@extension.list.theme', '@extension.list.profile']
