--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "mglaman/phpstan-drupal": "^0.12.0",
         "phpstan/phpstan-deprecation-rules": "^0.12.0",
         "drupal/git_deploy": "2.x-dev",
-        "mathieuviossat/arraytotexttable": "~1.0.0"
+        "mathieuviossat/arraytotexttable": "~1.0.0",
+        "nikic/php-parser": "^4.0.0"
     },
     "minimum-stability": "dev",
     "extra": {
