--- a/tests/modules/upgrade_status_test_contrib_error/upgrade_status_test_contrib_error.info.yml
+++ b/tests/modules/upgrade_status_test_contrib_error/upgrade_status_test_contrib_error.info.yml
@@ -4,4 +4,4 @@ description: 'Support module for upgrade status module testing.'
 package: Testing
 version: VERSION
 core: 8.x
-project: 'upgrade_status'
+project: 'upgrade_status_test_contrib_error'
