--- a/upgrade_status.services.yml
+++ b/upgrade_status.services.yml
@@ -1,10 +1,23 @@
 services:
   upgrade_status.deprecation_analyzer:
     class: Drupal\upgrade_status\DeprecationAnalyzer
-    arguments: ['@keyvalue', '@logger.channel.upgrade_status', '@http_client', '@file_system', '@twig', '@upgrade_status.library_deprecation_analyzer', '@upgrade_status.theme_function_deprecation_analyzer']
+    arguments:
+      - '@keyvalue'
+      - '@logger.channel.upgrade_status'
+      - '@http_client'
+      - '@file_system'
+      - '@twig'
+      - '@upgrade_status.library_deprecation_analyzer'
+      - '@upgrade_status.theme_function_deprecation_analyzer'
+      - '@datetime.time'
   upgrade_status.library_deprecation_analyzer:
     class: Drupal\upgrade_status\LibraryDeprecationAnalyzer
-    arguments: ['@library.discovery.parser', '@twig', '@extension.list.module', '@extension.list.theme', '@extension.list.profile']
+    arguments: 
+      - '@library.discovery.parser'
+      - '@twig'
+      - '@extension.list.module'
+      - '@extension.list.theme'
+      - '@extension.list.profile'
   upgrade_status.theme_function_deprecation_analyzer:
     class: Drupal\upgrade_status\ThemeFunctionDeprecationAnalyzer
     arguments: ['@service_container']
