--- a/upgrade_status.info.yml
+++ b/upgrade_status.info.yml
@@ -1,10 +1,9 @@
 type: module
 name: 'Upgrade Status'
-description: 'Review current status of known Drupal 9 incompatibilities on the site.'
+description: 'Review Drupal 9 readiness of the environment and components of the site.'
 configure: upgrade_status.report
 package: Administration
-core: 8.x
+core_version_requirement: ^8.7.7 || ^9
 php: '7.1'
 dependencies:
   - drupal:update
-  - drupal:system (>=8.7.0)
