--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "mglaman/phpstan-drupal": "^0.12.0",
         "phpstan/phpstan-deprecation-rules": "^0.12.0",
         "mathieuviossat/arraytotexttable": "~1.0.0",
-        "nikic/php-parser": "^4.0.0"
+        "nikic/php-parser": "^4.0.0",
+        "webflo/drupal-finder": "^1.2"
     },
     "minimum-stability": "dev",
     "extra": {
