--- a/tests/modules/upgrade_status_test_library_exception/upgrade_status_test_library_exception.info.yml
+++ b/tests/modules/upgrade_status_test_library_exception/upgrade_status_test_library_exception.info.yml
@@ -1,4 +1,4 @@
-name: 'Upgrade status test library'
+name: 'Upgrade status test library exception'
 type: module
 description: 'Support module for upgrade status module testing.'
 package: Testing
