--- a/tests/modules/upgrade_status_test_error/upgrade_status_test_error.info.yml
+++ b/tests/modules/upgrade_status_test_error/upgrade_status_test_error.info.yml
@@ -3,4 +3,5 @@ type: module
 description: 'Support module for upgrade status module testing.'
 package: Testing
 version: VERSION
-core: 8.x
+dependencies:
+  -drupal:upgrade_status_contrib_error
