Issue #3201156 by Gábor Hojtsy, andypost: Make Upgrade Status logic make sense on Drupal 9

--- a/upgrade_status.info.yml
+++ b/upgrade_status.info.yml
@@ -1,6 +1,6 @@
 type: module
 name: 'Upgrade Status'
-description: 'Review Drupal 9 readiness of the environment and components of the site.'
+description: 'Review Drupal major upgrade readiness of the environment and components of the site.'
 configure: upgrade_status.report
 package: Administration
 core_version_requirement: ^8 || ^9
