--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "drupal/upgrade_status",
     "type": "drupal-module",
-    "description": "Review current status of known Drupal 9 incompatibilities on the site.",
+    "description": "Review Drupal major upgrade readiness of the environment and components of the site.",
     "homepage": "http://drupal.org/project/upgrade_status",
     "license": "GPL-2.0-or-later",
     "require": {
