--- a/tests/modules/upgrade_status_test_10_compatible/upgrade_status_test_10_compatible.info.yml
+++ b/tests/modules/upgrade_status_test_10_compatible/upgrade_status_test_10_compatible.info.yml
@@ -1,6 +1,6 @@
-name: 'Upgrade status test no error'
+name: 'Upgrade status test 10 compatible'
 type: module
 description: 'Support module for upgrade status module testing.'
 package: Testing
 version: VERSION
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
