--- a/tests/modules/upgrade_status_test_contrib_9_compatible/upgrade_status_test_contrib_9_compatible.info.yml
+++ b/tests/modules/upgrade_status_test_contrib_9_compatible/upgrade_status_test_contrib_9_compatible.info.yml
@@ -1,4 +1,4 @@
-name: 'Upgrade status test contrib no error'
+name: 'Upgrade status test contrib 9 compatible'
 type: module
 description: 'Support module for upgrade status module testing.'
 package: Testing
@@ -6,4 +6,5 @@ version: VERSION
 # Intentionally using a requirement that is slightly more specific to
 # test handling of this case.
 core_version_requirement: ^8 || ^9.1
-project: 'upgrade_status_test_contributed_no_error'
+# Project name intentionally different from module name for testing.
+project: 'upgrade_status_test_contributed_9_compatible'
