--- a/tests/themes/upgrade_status_test_theme/upgrade_status_test_theme.info.yml
+++ b/tests/themes/upgrade_status_test_theme/upgrade_status_test_theme.info.yml
@@ -1,8 +1,7 @@
 name: 'Upgrade status test theme'
 type: theme
-description: 'Theme for testing the deprecations in themes'
+description: 'Theme for testing deprecations in themes'
 version: VERSION
-base theme: false
 core_version_requirement: ^8 || ^9
 libraries-override:
   upgrade_status_test_library/deprecated_library:
