--- a/tests/modules/upgrade_status_test_contrib_error/upgrade_status_test_contrib_error.info.yml
+++ b/tests/modules/upgrade_status_test_contrib_error/upgrade_status_test_contrib_error.info.yml
@@ -2,5 +2,5 @@ name: 'Upgrade status test contrib error'
 type: module
 description: 'Support module for upgrade status module testing.'
 package: Testing
-version: VERSION
+# Project name is intentionally set to test this as a contrib project.
 project: 'upgrade_status_test_contrib_error'
