--- a/tests/modules/upgrade_status_test_library_exception/upgrade_status_test_library_exception.info.yml
+++ b/tests/modules/upgrade_status_test_library_exception/upgrade_status_test_library_exception.info.yml
@@ -2,7 +2,6 @@ name: 'Upgrade status test library exception'
 type: module
 description: 'Support module for upgrade status module testing.'
 package: Testing
-version: VERSION
 core_version_requirement: ^8 || ^9
 dependencies:
-  - upgrade_status_test_twig
+  - drupal:upgrade_status_test_twig
