--- a/upgrade_status.info.yml
+++ b/upgrade_status.info.yml
@@ -3,7 +3,7 @@ name: 'Upgrade Status'
 description: 'Review Drupal major upgrade readiness of the environment and components of the site.'
 configure: upgrade_status.report
 package: Administration
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 core: 8.x
 php: '7.1'
 dependencies:
